--- a/package.json
+++ b/package.json
@@ -23,34 +23,30 @@
     "start": "node -r ts-node/register ./src/index.ts"
   },
   "devDependencies": {
-    "@types/node": "18.11.9",
-    "eslint": "8.23.1",
-    "eslint-config-prettier": "8.5.0",
-    "mocha": "10.1.0",
-    "prettier": "2.7.1",
-    "rimraf": "3.0.2",
-    "tslib": "2.4.1",
+    "@types/node": "18.16.10",
+    "eslint": "8.40.0",
+    "eslint-config-prettier": "8.8.0",
+    "mocha": "10.2.0",
+    "prettier": "2.8.8",
+    "rimraf": "4.4.1",
+    "tslib": "2.5.0",
     "tslint": "6.1.3",
     "tslint-config-prettier": "1.18.0",
     "tslint-plugin-prettier": "2.3.0"
   },
   "dependencies": {
-    "@debridge-finance/dln-client": "5.0.1",
-    "@debridge-finance/solana-utils": "2.0.0",
-    "@protobuf-ts/plugin": "2.8.1",
-    "@solana/web3.js": "1.66.2",
-    "amqplib": "0.10.3",
-    "axios": "0.21.4",
-    "axios-cache-adapter": "2.7.3",
+    "@debridge-finance/dln-client": "5.0.2",
+    "@debridge-finance/solana-utils": "2.4.0",
+    "@protobuf-ts/plugin": "2.9.0",
+    "@solana/web3.js": "1.76.0",
     "bignumber.js": "9.1.0",
     "bs58": "5.0.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "16.0.3",
     "ethers": "5.7.2",
     "pino": "8.7.0",
     "pino-pretty": "9.1.1",
     "pino-sentry": "0.13.0",
     "ts-node": "10.9.1",
-    "web3": "1.8.0",
-    "ws": "8.10.0"
+    "web3": "1.8.0"
   }
 }
